<?xml version="1.0"?>
<package format="2">
  <name>hiro_panda_moveit</name>
  <version>0.0.0</version>
  <description>The hiro_panda_moveit package</description>

  <maintainer email="chwu5235@colorado.edu">CJ Wu</maintainer>

  <license>LGPLv2.1</license>

  <author email="chwu5235@colorado.edu">CJ Wu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>franka_control</build_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>franka_control</build_export_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_ros_control_interface</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>franka_control</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
